Refactor HTML structure and enhance footer styling for improved layout and accessibility

--- a/index.html
+++ b/index.html
@@ -1,74 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="styles.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Gym App</title>
-</head>
-<body>
-<header>
-    <h1>GYM LOGO</h1>
-    <nav class="nav-bar">
+  </head>
+  <body>
+    <header>
+     <a href="index.html" class="logo"> <h1>GYM LOGO</h1></a>
+      <nav class="nav-bar">
         <ul class="nav-links">
-            <li class="nav-link"><a href="#">Home</a></li>
-            <li class="nav-link"><a href="#">Contact</a></li>
-            <li class="nav-link"><a href="#">Associate</a></li>
+          <li class="nav-link"><a href="#">Home</a></li>
+          <li class="nav-link"><a href="#">Contact</a></li>
+          <li class="nav-link"><a href="#">Associate</a></li>
         </ul>
-    </nav>
-</header>
-<main class="container">
-    <section class="membresias-section">
-        <h2>
-            CONOCÉ
-        </h2>
+      </nav>
+    </header>
+    <main class="container">
+      <section class="membresias-section">
+        <h2>CONOCÉ</h2>
         <p>SERVICIOS Y MEMBRESÍAS</p>
-    </section>
+      </section>
 
-    <div class="wrapper">
+      <div class="wrapper">
         <section class="sedes-section">
-            <h2>
-                ELEGÍ
-            </h2>
-            <p>SEDES Y HORARIOS</p>
+          <h2>ELEGÍ</h2>
+          <p>SEDES Y HORARIOS</p>
         </section>
         <section class="entrenamientos-section">
-            <h2>
-                ENTRENÁ
-            </h2>
-            <p>GRATIS UN DÍA</p>
+          <h2>ENTRENÁ</h2>
+          <p>GRATIS UN DÍA</p>
         </section>
-    </div>
-
-</main>
-<footer>
-    <h2>GYM LOGO</h2>
-    <ul class="social-media-icon-container">
-        <li class="social-media-icon">
+      </div>
+    </main>
+    <footer>
+      <div class="social-media">
+        <h2>GYM LOGO</h2>
+        <ul class="social-media-icon-container">
+          <li class="social-media-icon">
             <a href="https://www.instragram.com" target="_blank">
-                <img class="icon instragram-icon" src="./assets/logotipo-de-instagram.png" alt="instagram logo">
+              <img
+                class="icon instragram-icon"
+                src="./assets/logotipo-de-instagram.png"
+                alt="instagram logo"
+              />
             </a>
-        </li>
-        <li class="social-media-icon">
+          </li>
+          <li class="social-media-icon">
             <a href="https://www.facebook.com" target="_blank">
-                <img class="icon facebook-icon" src="./assets/facebook-logo.png" alt="facebook logo">
+              <img
+                class="icon facebook-icon"
+                src="./assets/facebook-logo.png"
+                alt="facebook logo"
+              />
             </a>
-        </li>
-        <li class="social-media-icon">
+          </li>
+          <li class="social-media-icon">
             <a href="https://www.whatsapp.com" target="_blank">
-                <img class="icon whatsapp-icon" src="./assets/whatsapp.png" alt="whatsapp logo">
+              <img
+                class="icon whatsapp-icon"
+                src="./assets/whatsapp.png"
+                alt="whatsapp logo"
+              />
             </a>
-        </li>
-        <li class="social-media-icon">
+          </li>
+          <li class="social-media-icon">
             <a href="https://www.youtube.com" target="_blank">
-                <img class="icon youtube-icon" src="./assets/youtube.png" alt="youtube logo">
+              <img
+                class="icon youtube-icon"
+                src="./assets/youtube.png"
+                alt="youtube logo"
+              />
             </a>
-        </li>
-        <li class="social-media-icon">
+          </li>
+          <li class="social-media-icon">
             <a href="https://www.linkedin.com" target="_blank">
-                <img class="icon linkedin-icon" src="./assets/logotipo-de-linkedin.png" alt="linkedin logo">
+              <img
+                class="icon linkedin-icon"
+                src="./assets/logotipo-de-linkedin.png"
+                alt="linkedin logo"
+              />
             </a>
-        </li>
-    </ul>
-</footer>
-</body>
+          </li>
+        </ul>
+      </div>
+      <div class="contact-container">
+        <ul>
+          <li>Dudas</li>
+          <li>Contacto</li>
+          <li>Corporativo</li>
+          <li>RRHH</li>
+          <li>Pautas de convivencia</li>
+        </ul>
+      </div>
+
+
+      <div class="terms-conditions-container">
+        <ul>
+          <li>Términos y Condiciones - Contratos de adhesión - Ley N° 24.240 de Defensa del Consumidorudas</li>
+          <li>Políticas de privacidad</li>
+          <li>Botón de arrepentimiento</li>
+          <li>Botón de baja de servicio</li>
+          <li>Defensa de las y los consumidores. Para reclamos Ingrese aquí</li>
+        </ul>
+      </div>
+
+      <div class="logos-row">
+        <img src="" alt="first logo"><img src="" alt="second logo"><img src="" alt="third logo">
+      </div>
+    </footer>
+  </body>
 </html>
