--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </main>
     <footer>
       <div class="social-media">
-        <h2>GYM LOGO</h2>
+        <a href="index.html" class="logo"> <h1>GYM LOGO</h1></a>
         <ul class="social-media-icon-container">
           <li class="social-media-icon">
             <a href="https://www.instragram.com" target="_blank">
@@ -105,9 +105,7 @@
         </ul>
       </div>
 
-      <div class="logos-row">
-        <img src="" alt="first logo"><img src="" alt="second logo"><img src="" alt="third logo">
-      </div>
+     
     </footer>
   </body>
 </html>
