Add logo images and update HTML structure; enhance footer with WhatsApp link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-     <a href="index.html" class="logo"> <h1>GYM LOGO</h1></a>
+     <a href="index.html" class="logo-container"> <img class="logo" src="./assets/logo.png" alt="page logo"></a>
       <nav class="nav-bar">
         <ul class="nav-links">
           <li class="nav-link"><a href="#">Home</a></li>
@@ -35,7 +35,7 @@
     </main>
     <footer>
       <div class="social-media">
-        <a href="index.html" class="logo"> <h1>GYM LOGO</h1></a>
+        <a href="index.html" class="logo-container"> <img class="logo" src="./assets/logo.png" alt="page logo"></a>
         <ul class="social-media-icon-container">
           <li class="social-media-icon">
             <a href="https://www.instragram.com" target="_blank">
@@ -104,7 +104,9 @@
           <li>Defensa de las y los consumidores. Para reclamos Ingrese aquí</li>
         </ul>
       </div>
-
+     <a href="https://www.whatsapp.com" target="_blank">
+      <img class="fixed-whatsapp-logo" src="./assets/whatsapp-green.png" alt="whatsapp logo">
+     </a>
      
     </footer>
   </body>
