--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
-    <title>Gym App</title>
+    <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
+    <title>Spartan Fit</title>
   </head>
   <body>
     <header>
-     <a href="index.html" class="logo-container"> <img class="logo" src="./assets/logo.png" alt="page logo"></a>
+      <a href="index.html" class="logo-container">
+        <img class="logo" src="./assets/logo.png" alt="page logo"
+      /></a>
       <nav class="nav-bar">
+        <div class="menu-toggle">&#9776;</div>
         <ul class="nav-links">
           <li class="nav-link"><a href="#">Home</a></li>
           <li class="nav-link"><a href="#">Contact</a></li>
@@ -109,5 +114,6 @@
      </a>
      
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
