Add global and membresias styles; include new pool image and update HTML structure for improved layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/global.css" />
     <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon" />
     <title>Spartan Fit</title>
   </head>
@@ -22,10 +23,12 @@
       </nav>
     </header>
     <main class="container">
-      <section class="membresias-section">
-        <h2>CONOCÉ</h2>
-        <p>SERVICIOS Y MEMBRESÍAS</p>
-      </section>
+      <a href="./pages/Membresias/membresias.html">
+        <section class="membresias-section">
+          <h2>CONOCÉ</h2>
+          <p>SERVICIOS Y MEMBRESÍAS</p>
+        </section>
+      </a>
 
       <div class="wrapper">
         <section class="sedes-section">
@@ -40,7 +43,9 @@
     </main>
     <footer>
       <div class="social-media">
-        <a href="index.html" class="logo-container"> <img class="logo" src="./assets/logo.png" alt="page logo"></a>
+        <a href="index.html" class="logo-container">
+          <img class="logo" src="./assets/logo.png" alt="page logo"
+        /></a>
         <ul class="social-media-icon-container">
           <li class="social-media-icon">
             <a href="https://www.instragram.com" target="_blank">
@@ -99,20 +104,25 @@
         </ul>
       </div>
 
-
       <div class="terms-conditions-container">
         <ul>
-          <li>Términos y Condiciones - Contratos de adhesión - Ley N° 24.240 de Defensa del Consumidorudas</li>
+          <li>
+            Términos y Condiciones - Contratos de adhesión - Ley N° 24.240 de
+            Defensa del Consumidorudas
+          </li>
           <li>Políticas de privacidad</li>
           <li>Botón de arrepentimiento</li>
           <li>Botón de baja de servicio</li>
           <li>Defensa de las y los consumidores. Para reclamos Ingrese aquí</li>
         </ul>
       </div>
-     <a href="https://www.whatsapp.com" target="_blank">
-      <img class="fixed-whatsapp-logo" src="./assets/whatsapp-green.png" alt="whatsapp logo">
-     </a>
-     
+      <a href="https://www.whatsapp.com" target="_blank">
+        <img
+          class="fixed-whatsapp-logo"
+          src="./assets/whatsapp-green.png"
+          alt="whatsapp logo"
+        />
+      </a>
     </footer>
     <script src="./script.js"></script>
   </body>
