Add responsive design enhancements; update CSS for mobile layout and include new HTML structure for platinum section

--- a/pages/Membresias/membresias.html
+++ b/pages/Membresias/membresias.html
@@ -55,10 +55,33 @@
           </div>
           <button>VER SEDES</button>
         </div>
+
+        <div class="image-container">
+          <img src="../../assets/pool.jpg" alt="people swimming in pool" />
+        </div>
+      </section>
+
+      <section class="platinum-section">
+        <div class="text-container">
+          <div class="text">
+            <h3>PLATINUM</h3>
+            <p>
+              Con una membresía Platino en Megatlon, accedés a 26 sedes todos
+              los días. Disfrutás de natatorios, más de 80 clases grupales,
+              planes de entrenamiento personalizados y equipamiento de calidad.
+              También tenés acceso a eventos, actividades recreativas, Running
+              Cycling y Rollers Team. Encontrá tu sede Platino favorita con el
+              botón a continuación.
+            </p>
+          </div>
+          <button>VER SEDES</button>
+        </div>
+
         <div class="image-container">
           <img src="../../assets/pool.jpg" alt="people swimming in pool" />
         </div>
       </section>
     </main>
+    <script src="../../script.js"></script>
   </body>
 </html>
