--- a/pages/Membresias/membresias.html
+++ b/pages/Membresias/membresias.html
@@ -40,8 +40,8 @@
         </div>
       </section>
 
-      <section class="second-section">
-        <div class="text-container">
+      <section class="black-section">
+        <div class="black-section-text-container">
           <div class="text">
             <h3>BLACK</h3>
             <p>
@@ -62,7 +62,7 @@
       </section>
 
       <section class="platinum-section">
-        <div class="text-container">
+        <div class="platinum-section-text-container">
           <div class="text">
             <h3>PLATINUM</h3>
             <p>
