Add footer section with social media links and update styles for improved layout and responsiveness

--- a/pages/Membresias/membresias.html
+++ b/pages/Membresias/membresias.html
@@ -78,9 +78,92 @@
         </div>
 
         <div class="image-container">
-          <img src="../../assets/pool.jpg" alt="people swimming in pool" />
+          <img src="../../assets/gym-91849_1920.jpg" alt="people swimming in pool" />
         </div>
       </section>
+      <footer>
+        <div class="social-media">
+          <a href="../../index.html" class="logo-container">
+            <img class="logo" src="../../assets/logo.png" alt="page logo"
+          /></a>
+          <ul class="social-media-icon-container">
+            <li class="social-media-icon">
+              <a href="https://www.instragram.com" target="_blank">
+                <img
+                  class="icon instragram-icon"
+                  src="../../assets/logotipo-de-instagram.png"
+                  alt="instagram logo"
+                />
+              </a>
+            </li>
+            <li class="social-media-icon">
+              <a href="https://www.facebook.com" target="_blank">
+                <img
+                  class="icon facebook-icon"
+                  src="../../assets/facebook-logo.png"
+                  alt="facebook logo"
+                />
+              </a>
+            </li>
+            <li class="social-media-icon">
+              <a href="https://www.whatsapp.com" target="_blank">
+                <img
+                  class="icon whatsapp-icon"
+                  src="../../assets/whatsapp.png"
+                  alt="whatsapp logo"
+                />
+              </a>
+            </li>
+            <li class="social-media-icon">
+              <a href="https://www.youtube.com" target="_blank">
+                <img
+                  class="icon youtube-icon"
+                  src="../../assets/youtube.png"
+                  alt="youtube logo"
+                />
+              </a>
+            </li>
+            <li class="social-media-icon">
+              <a href="https://www.linkedin.com" target="_blank">
+                <img
+                  class="icon linkedin-icon"
+                  src="../../assets/logotipo-de-linkedin.png"
+                  alt="linkedin logo"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="contact-container">
+          <ul>
+            <li>Dudas</li>
+            <li>Contacto</li>
+            <li>Corporativo</li>
+            <li>RRHH</li>
+            <li>Pautas de convivencia</li>
+          </ul>
+        </div>
+  
+        <div class="terms-conditions-container">
+          <ul>
+            <li>
+              Términos y Condiciones - Contratos de adhesión - Ley N° 24.240 de
+              Defensa del Consumidorudas
+            </li>
+            <li>Políticas de privacidad</li>
+            <li>Botón de arrepentimiento</li>
+            <li>Botón de baja de servicio</li>
+            <li>Defensa de las y los consumidores. Para reclamos Ingrese aquí</li>
+          </ul>
+        </div>
+        <a href="https://www.whatsapp.com" target="_blank">
+          <img
+            class="fixed-whatsapp-logo"
+            src="../../assets/whatsapp-green.png"
+            alt="whatsapp logo"
+          />
+        </a>
+      </footer>
     </main>
     <script src="../../script.js"></script>
   </body>
