Refactor CSS styles for improved layout and responsiveness; update footer, header, and section styles, and enhance media queries for better mobile support

--- a/pages/Membresias/membresias.html
+++ b/pages/Membresias/membresias.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="image-container">
-          <img src="../../assets/pool.jpg" alt="people swimming in pool" />
+          <img class="hero-image" src="../../assets/pool.jpg" alt="people swimming in pool" />
         </div>
       </section>
 
@@ -78,7 +78,7 @@
         </div>
 
         <div class="image-container">
-          <img src="../../assets/gym-91849_1920.jpg" alt="people swimming in pool" />
+          <img class="hero-image" src="../../assets/gym-91849_1920.jpg" alt="people swimming in pool" />
         </div>
       </section>
       <footer>
